# firestore-serde

./: Cargo.toml  README.md
.github/workflows/: rust.yml
firestore-serde/: Cargo.toml
firestore-serde-timestamp/: Cargo.toml
firestore-serde-timestamp/src/: lib.rs
firestore-serde/src/: firestore.rs  lib.rs
firestore-serde/src/deserialize/: error.rs  mod.rs  plain_byte_deserializer.rs  plain_string_deserializer.rs
firestore-serde/src/serialize/: array_builder.rs  error.rs  kv_map_builder.rs  map_builder.rs  mod.rs  named_array_builder.rs  named_map_builder.rs  timestamp_serializer.rs
