[package]
name = "firestore-serde-timestamp"
version = "0.1.0"
edition = "2018"
description = "A timestamp serialization helper for firestore-serde."
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["firestore", "gcp"]
repository = "https://github.com/paulgb/firestore-serde"

[dependencies]
chrono = "0.4.19"
prost = "0.9.0"
prost-types = "0.9.0"
serde = "1.0.136"
serde_bytes = "0.11.5"

[dev-dependencies]
firestore-serde = {path="../firestore-serde", version="0.1.0"}
googapis = "0.6.0"
