[package]
name = "firestore-serde"
version = "0.1.2"
edition = "2018"
description = "A Rust serializer/deserializer for Google Cloud Firestore."
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["firestore", "gcp"]
repository = "https://github.com/paulgb/firestore-serde"

[dependencies]
bytes = "1.1.0"
chrono = "0.4.19"
googapis = { version = "0.6.0" }
prost = "0.9.0"
prost-types = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"

[features]
default = ["google-firestore-v1"]
google-firestore-v1 = ["googapis/google-firestore-v1"]
google-firestore-v1beta1 = ["googapis/google-firestore-v1beta1"]

[dev-dependencies]
